# lararium

./: .env  .gitignore  API  Cargo.toml  Containerfile  README.md  download-oci.nu  podman-compose.yaml
crates/abi/: Cargo.toml
crates/abi/src/: error.rs  lib.rs  prelude.rs  registry.rs  time.rs  tracing.rs
crates/adoption-tonic/: Cargo.toml
crates/adoption-tonic/src/: error.rs  lib.rs
crates/amphora/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  server.rs
crates/auth-engine/: Cargo.toml
crates/auth-engine/src/: engine.rs
crates/auth-tonic/: Cargo.toml
crates/auth-tower/: Cargo.toml
crates/beehive/: Cargo.toml
crates/beehive/src/: lib.rs  main.rs  prelude.rs
crates/beehive/src/adapters/: mod.rs
crates/beehive/src/adapters/ezsp/: adapter.rs  ash.rs  crc_ccitt.rs  frame.rs  mod.rs  pseudo_random.rs
crates/beehive/src/adapters/ezsp/ash/: frame.rs  mod.rs  pseudo_random.rs
crates/beehive/src/adapters/ezsp/frame/: ember_initial_security_bitmask.rs  ember_key_data.rs  ember_network_init_bitmask.rs  ember_network_init_response.rs  ember_network_parameters.rs  ember_status.rs  ember_version_response.rs  encoding.rs  ezsp_status.rs  frame_id.rs  mod.rs  set_initial_security_state_response.rs  unknown_command_response.rs
crates/beehive/src/adapters/ezsp_uart/: adapter.rs  mod.rs
crates/beehive/src/adapters/ezsp_uart/ash/: mod.rs
crates/beehive/src/adapters/ezsp_uart/ezsp/: ember_device_update.rs  ember_eui64.rs  ember_form_network_command.rs  ember_form_network_response.rs  ember_initial_security_bitmask.rs  ember_join_method.rs  ember_key_data.rs  ember_network_init_bitmask.rs  ember_network_init_command.rs  ember_network_init_response.rs  ember_network_parameters.rs  ember_node_id.rs  ember_status.rs  ember_version_command.rs  ember_version_response.rs  empty.rs  ezsp_config_id.rs  ezsp_decision_id.rs  ezsp_extended_value_id.rs  ezsp_policy_id.rs  ezsp_status.rs  ezsp_value_id.rs  frame_id.rs  mod.rs  primitives.rs  set_initial_security_state_command.rs  stack_status_handler_response.rs  unknown_command_response.rs
crates/beehive/src/adapters/ezsp_uart/ezsp/frames/: form_network_command.rs  form_network_response.rs  get_configuration_value_command.rs  get_configuration_value_response.rs  invalid_command_response.rs  mod.rs  network_init_command.rs  network_init_response.rs  permit_joining_command.rs  permit_joining_response.rs  set_initial_security_state_response.rs  version_command.rs  version_response.rs
crates/beehive/src/drivers/: mod.rs
crates/beehive/src/drivers/ezsp_uart/: driver.rs  mod.rs
crates/beehive/src/drivers/ezsp_uart/ash/: frame.rs
crates/beehive/src/drivers/ezsp_uart/ezsp/: ember_aps_frame.rs  ember_aps_option.rs  ember_concentrator_type.rs  ember_eui64.rs  ember_initial_security_bitmask.rs  ember_initial_security_state.rs  ember_join_decision.rs  ember_key_data.rs  ember_network_init_bitmask.rs  ember_network_parameters.rs  ember_network_status.rs  ember_node_id.rs  ember_node_type.rs  ember_outgoing_message_type.rs  ember_status.rs  ezsp_decision_bitmask.rs  ezsp_extended_value_id.rs  ezsp_value_id.rs  manufacturer.rs  mod.rs  primitives.rs
crates/beehive/src/drivers/ezsp_uart/ezsp/frames/: add_endpoint.rs  message_sent.rs  mod.rs  send_unicast.rs
crates/cli/: Cargo.toml
crates/containers/: Cargo.toml
crates/containers/src/: lib.rs  prelude.rs
crates/controller/: Cargo.toml
crates/controller-engine/: Cargo.toml
crates/controller-tonic/: Cargo.toml
crates/controller-tower/: Cargo.toml
crates/controller/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: entry.rs  filter.rs  lib.rs  mqtt.rs  prelude.rs  registry.rs  schema.rs  segment.rs  topic.rs  value.rs
crates/core/src/proto/: adoption.rs  auth.rs  gateway.rs  mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs
crates/curator/: Cargo.toml
crates/curator/src/: main.rs  media.rs  stream.rs
crates/derive/: Cargo.toml
crates/dhcp/: Cargo.toml
crates/dhcp/src/: lib.rs  protocol.rs  server.rs
crates/dhcp/src/server/: mod.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: error.rs  lib.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs  protocol.rs  server.rs
crates/dns/src/server/: mod.rs
crates/gateway/: Cargo.toml
crates/gateway-engine/: Cargo.toml
crates/gateway-tonic/: Cargo.toml
crates/gateway-tonic/src/: lib.rs
crates/gateway-tower/: Cargo.toml
crates/gateway-tower/src/: client.rs  lib.rs  server.rs
crates/gateway/src/: api.rs  dhcp.rs  dns.rs  lib.rs  main.rs  mqtt.rs  nfs.rs  ntp.rs
crates/library-tonic/: Cargo.toml
crates/modules/: Cargo.toml
crates/modules/src/: error.rs  lib.rs  stderr.rs  stdout.rs
crates/modules/wit/: extension.wit
crates/mqtt/: Cargo.toml
crates/mqtt/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/mqtt/station/: Cargo.toml
crates/mqtt/station/src/: main.rs
crates/nfs/: Cargo.toml
crates/nfs/src/: lib.rs  protocol.rs
crates/nfs/src/protocol/: decode.rs  encode.rs  mod.rs
crates/nfs/src/server/: connection.rs  error.rs  handler.rs  mod.rs
crates/ntp/: Cargo.toml
crates/nucleus/: Cargo.toml
crates/nucleus/src/: main.rs
crates/registry/: Cargo.toml
crates/registry/src/: error.rs  lib.rs
crates/relay/: Cargo.toml
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/rules/wit/: extension.wit  host.wit
crates/server/: Cargo.toml
crates/server/src/: api.rs  dhcp.rs  dns.rs  error.rs  lib.rs  main.rs  mqtt.rs  nfs.rs  ntp.rs
crates/server/wit/: application.wit
crates/station/: Cargo.toml
crates/station/src/: container.rs  error.rs  lib.rs  main.rs  media.rs  prelude.rs  stderr.rs  stream.rs
crates/station/src/containers/: error.rs  mod.rs
crates/station/wit/: extension.wit
crates/store/: Cargo.toml
crates/synapse/: Cargo.toml
crates/synapse/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/web/: Cargo.toml
examples/jellyfin/: Cargo.toml
examples/kodi/: Cargo.toml
proto/lararium/: services.proto  types.proto
(+24 files in other folders)
