[workspace]
members = [
  "crates/api",
  "crates/beehive",
  "crates/cli",
  "crates/core",
  "crates/containers",
  "crates/crypto",
  "crates/derive",
  "crates/dhcp",
  "crates/dns",
  "crates/gateway",
  "crates/modules",
  "crates/mqtt",
  "crates/registry",
  "crates/rules",
  "crates/station",
  "crates/store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
lararium = { path = "crates/core" }
lararium-abi = { path = "crates/abi" }
lararium-api = { path = "crates/api" }
lararium-containers = { path = "crates/containers" }
lararium-crypto = { path = "crates/crypto" }
lararium-derive = { path = "crates/derive" }
lararium-dhcp = { path = "crates/dhcp" }
lararium-dns = { path = "crates/dns" }
lararium-modules = { path = "crates/modules" }
lararium-mqtt = { path = "crates/mqtt" }
lararium-registry = { path = "crates/registry" }
lararium-store = { path = "crates/store" }

axum = "0.7.7"
base32 = "0.5.1"
bytes = "1.8.0"
ciborium = "0.2.2"
clap = "4.5.20"
color-eyre = "0.6.3"
dashmap = "6.1.0"
derive_more = "1.0.0"
flume = "0.11.1"
nix = "0.29.0"
openssl = "0.10.68"
quote = "1.0.37"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
serialport = "4.6.0"
strum = "0.26.3"
syn = "2.0.89"
tokio = "1.41.1"
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
wasmtime = "27.0.0"

[workspace.lints.clippy]
cargo = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
strip = true
