[workspace]
members = [
  "crates/amphora",
  "crates/api",
  "crates/beehive",
  "crates/cli",
  "crates/core",
  "crates/crypto",
  "crates/derive",
  "crates/dhcp",
  "crates/dns",
  "crates/gateway",
  "crates/mqtt",
  "crates/nfs",
  "crates/ntp",
  "crates/registry",
  "crates/station",
  "crates/store",
  "examples/jellyfin",
  "examples/kodi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
lararium = { path = "crates/core" }
lararium-amphora = { path = "crates/amphora" }
lararium-api = { path = "crates/api" }
lararium-crypto = { path = "crates/crypto" }
lararium-derive = { path = "crates/derive" }
lararium-dhcp = { path = "crates/dhcp" }
lararium-dns = { path = "crates/dns" }
lararium-mqtt = { path = "crates/mqtt" }
lararium-nfs = { path = "crates/nfs" }
lararium-ntp = { path = "crates/ntp" }
lararium-registry = { path = "crates/registry" }
lararium-store = { path = "crates/store" }

axum = "0.7.9"
base32 = "0.5.1"
bitflags = "2.7.0"
bytes = "1.9.0"
ciborium = "0.2.2"
clap = "4.5.23"
color-eyre = "0.6.3"
cookie-factory = "0.3.3"
dashmap = "6.1.0"
derive_more = "1.0.0"
flume = "0.11.1"
nix = "0.29.0"
nom = "7.1.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
openssl = "0.10.68"
quote = "1.0.38"
reqwest = "0.12.11"
serde = "1.0.217"
serde_json = "1.0.134"
serialport = "4.6.1"
strum = "0.26.3"
syn = "2.0.93"
tokio = "1.42.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
wasmtime = "28.0.0"
wasmtime-wasi = "28.0.0"
wit-bindgen = "0.36.0"

[workspace.lints.clippy]
cargo = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
strip = true
