[workspace]
members = [
  "crates/amphora",
  "crates/api",
  "crates/beehive",
  "crates/cli",
  "crates/core",
  "crates/crypto",
  "crates/dhcp",
  "crates/dns",
  "crates/mqtt",
  "crates/nfs",
  "crates/ntp",
  "crates/server",
  "crates/station",
  "examples/jellyfin",
  "examples/kodi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
lararium = { path = "crates/core" }
lararium-amphora = { path = "crates/amphora" }
api = { path = "crates/api" }
crypto = { path = "crates/crypto" }
dhcp = { path = "crates/dhcp" }
dns = { path = "crates/dns" }
mqtt = { path = "crates/mqtt" }
nfs = { path = "crates/nfs" }
ntp = { path = "crates/ntp" }

axum = "0.7.9"
base32 = "0.5.1"
bitflags = "2.7.0"
bytes = "1.9.0"
ciborium = "0.2.2"
clap = "4.5.23"
color-eyre = "0.6.3"
cookie-factory = "0.3.3"
dashmap = "6.1.0"
derive_more = "1.0.0"
flume = "0.11.1"
nix = "0.29.0"
nom = "7.1.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
openssl = "0.10.68"
reqwest = "0.12.11"
serde = "1.0.217"
serde_json = "1.0.134"
serialport = "4.6.1"
strum = "0.26.3"
tokio = "1.42.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
wit-bindgen = "0.36.0"

[workspace.lints.clippy]
cargo = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
strip = true
