[package]
name = "lararium-containers"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
nix = { workspace = true, features = ["fs", "hostname", "mount", "process", "sched", "signal", "user"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[lints]
workspace = true
