[package]
name = "lararium-controller"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
base32 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
futures = { workspace = true }
lararium = { workspace = true, features = ["proto"] }
lararium-controller-engine = { workspace = true }
lararium-controller-tonic = { workspace = true }
lararium-controller-tower = { workspace = true }
lararium-crypto = { workspace = true }
lararium-discovery = { workspace = true }
lararium-store = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true, features = ["tls"] }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
