[package]
name = "lararium"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
ciborium = { workspace = true }
derive_more = { workspace = true, features = ["from", "into"] }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
