[package]
name = "lararium-curator"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-audio = { workspace = true }
gstreamer-video = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
