[package]
name = "lararium-dhcp"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
bytes = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
tokio = { workspace = true, features = ["io-util", "net", "rt"], optional = true }
tracing = { workspace = true }

[features]
default = []
client = []
server = ["tokio"]

[lints]
workspace = true
