[package]
name = "lararium-discovery"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
mdns-sd = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[lints]
workspace = true
