[package]
name = "lararium-gateway-tonic"
edition = "2021"
version.workspace = true

[dependencies]
lararium = { workspace = true, features = ["proto"] }
lararium-gateway-engine = { workspace = true }
lararium-gateway-tower = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
