[package]
name = "lararium-gateway-tower"
edition = "2021"
version.workspace = true

[dependencies]
# derive_more = { workspace = true }
hyper = { workspace = true }
lararium = { workspace = true }
lararium-gateway-engine = { workspace = true }
# serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
tower = { workspace = true }
# uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
