[package]
name = "lararium-mqtt"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
bytes = { workspace = true }
ciborium = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
flume = { workspace = true }
lararium = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync"], optional = true }
tracing = { workspace = true }

[features]
default = []
client = []
server = ["tokio"]

[lints]
workspace = true
