[package]
name = "lararium-nucleus"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
lararium-types = { workspace = true, features = ["serde"] }
rumqttc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
