[package]
name = "lararium-registry"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
ciborium = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "into"] }
lararium = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }

[lints]
workspace = true
