[package]
name = "lararium-rules"
edition = "2021"
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = { workspace = true }
lararium = { workspace = true }
lararium-abi = { workspace = true }
wit-bindgen = { workspace = true }

[features]

[lints]
workspace = true
