[package]
name = "lararium-server"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
lararium = { workspace = true }
lararium-api = { workspace = true, features = ["server"] }
lararium-crypto = { workspace = true }
lararium-dhcp = { workspace = true, features = ["server"] }
lararium-dns = { workspace = true, features = ["server"] }
lararium-mqtt = { workspace = true, features = ["server"] }
lararium-nfs = { workspace = true, features = ["server"] }
lararium-ntp = { workspace = true, features = ["server"] }
lararium-registry = { workspace = true }

base32 = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
dashmap = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { workspace = true }

[lints]
workspace = true
