[package]
name = "server"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
lararium = { workspace = true }
api = { workspace = true, features = ["server"] }
crypto = { workspace = true }
dhcp = { workspace = true, features = ["server"] }
dns = { workspace = true, features = ["server"] }
nfs = { workspace = true, features = ["server"] }
ntp = { workspace = true, features = ["server"] }

base32 = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
dashmap = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { workspace = true }

[lints]
workspace = true
