[package]
name = "lararium-station"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
lararium = { workspace = true }
lararium-amphora = { workspace = true, features = ["client"] }
api = { workspace = true, features = ["client"] }
crypto = { workspace = true }

bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
nix = { workspace = true, features = [
  "fs",
  "hostname",
  "mount",
  "process",
  "sched",
  "signal",
  "user",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[lints]
workspace = true
