[package]
name = "lararium-station"
edition = "2021"
publish = false
version.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-audio = { workspace = true }
gstreamer-video = { workspace = true }
lararium = { workspace = true, features = ["proto"] }
lararium-crypto = { workspace = true }
lararium-library-tonic = { workspace = true }
lararium-mqtt = { workspace = true, features = ["client"] }
lararium-store = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
